# django-webhooksocket

./: .gitignore  LICENSE  README.md  boot_django.py  makemigrations.py  setup.cfg
webhooksocket/: admin.py  apps.py  consumers.py  models.py  routing.py  urls.py  views.py
webhooksocket/migrations/: 0001_initial.py  0002_auto_20210602_2207.py
