[metadata]
name = django-webhooksocket
version = 0.0.1
description = Webhook websocket bridge
url = https://github.com/ToxicFrazzles/Django-WH-WS
license = MIT

[options]
include_package_data = true
python_requires = >=3.8
setup_requires =
    setuptools >= 38.3.0
install_requires =
    Django>=3.2
    channels>=3.0