[metadata]
name = django-webhooksocket
version = 1.0.0
description = Webhook websocket bridge
url = https://github.com/ToxicFrazzles/django-webhooksocket
license = MIT

[options]
include_package_data = true
python_requires = >=3.8
packages = find:
setup_requires =
    setuptools >= 38.3.0
    wheel
install_requires =
    Django>=3.2
    channels>=3.0